<resources>
    <string name="app_name">Submission 3</string>
    <string name="reminder_key" translatable="false">Daily Reminder</string>

    <string name="username">Username</string>
    <string name="input_username">Input Username</string>
    <string name="user_not_found">Username not found !</string>
    <string name="add_favorite">Add your favorite user</string>

    <string name="lbl_repo">Repositories</string>
    <string name="lbl_followers">Followers</string>
    <string name="lbl_following">Following</string>

    <string name="dummy_repo">20</string>
    <string name="dummy_followers">53</string>
    <string name="dummy_following">23</string>
    <string name="dummy_name">Name</string>
    <string name="dummy_company">Company</string>
    <string name="dummy_location">Location</string>

    <string name="desc_img_logo">Logo Application</string>
    <string name="desc_icon_location">Icon Location</string>
    <string name="desc_icon_company">Icon Company</string>

    <string name="title_language_settings">Change Language</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="desc_btn_fav">Button Favorite User</string>

    <string name="add_fav">successfully added user</string>
    <string name="update_fav">successfully update user</string>
    <string name="delete_fav">successfully delete user</string>

    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>

    <string name="reminder">Daily Reminder</string>
    <string name="title_reminder">Reminder User</string>
    <string name="message_reminder">Check your favorite User</string>
    <string name="reminder_on">Daily Reminder On</string>
    <string name="reminder_off">Daily Reminder Off</string>

</resources>